k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplemicroservice
  labels:
    app: simplemicroservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplemicroservice
  template:
    metadata:
      labels:
        app: simplemicroservice
    spec:
      containers:
        - name: simplemicroservice
          image: simplemicroservice:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
