k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplemicroservice
spec:
  selector:
    app: simplemicroservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
